--- a/MorderisationChallengeVT/MorderisationChallengeVT.WebAPI/Properties/launchSettings.json
+++ b/MorderisationChallengeVT/MorderisationChallengeVT.WebAPI/Properties/launchSettings.json
@@ -1,23 +1,23 @@
-﻿{
+{
   "$schema": "https://json.schemastore.org/launchsettings.json",
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
       "applicationUrl": "http://localhost:55491",
-      "sslPort": 44383
+      "sslPort": 44390
     }
   },
   "profiles": {
     "MorderisationChallengeVT.WebAPI": {
       "commandName": "Project",
-      "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "applicationUrl": "https://localhost:5679",
+      "dotnetRunMessages": true
     },
     "IIS Express": {
       "commandName": "IISExpress",
