add clickoutside directive, handle confirm deletion

--- a/morderisation-challenge-vt-vue/tsconfig.json
+++ b/morderisation-challenge-vt-vue/tsconfig.json
@@ -14,7 +14,8 @@
     "sourceMap": true,
     "baseUrl": ".",
     "types": [
-      "webpack-env"
+      "webpack-env",
+      "types/v-click-outside.d.ts"
     ],
     "paths": {
       "@/*": [
