--- a/morderisation-challenge-vt-vue/package.json
+++ b/morderisation-challenge-vt-vue/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^1.4.0",
     "core-js": "^3.8.3",
+    "v-click-outside": "^3.2.0",
     "vue": "^2.6.14",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^9.1.2",
